@@ -1,0 +1,16 @@
+{
+  "textures": [
+    "minecraft:big_smoke_0",
+    "minecraft:big_smoke_1",
+    "minecraft:big_smoke_2",
+    "minecraft:big_smoke_3",
+    "minecraft:big_smoke_4",
+    "minecraft:big_smoke_5",
+    "minecraft:big_smoke_6",
+    "minecraft:big_smoke_7",
+    "minecraft:big_smoke_8",
+    "minecraft:big_smoke_9",
+    "minecraft:big_smoke_10",
+    "minecraft:big_smoke_11"
+  ]
+}
